pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidMethodModifier.pkl
open function foo() = 42